<resources>
    <string name="app_name">Walify</string>
    <string name="walify">Walify</string>


    <string name="no_results_found">No results found</string>
    <string name="btn_retry">Retry</string>
    <string name="result_could_not_be_loaded">Result could not be loaded</string>
    <string name="download_image">Download Image</string>
    <string name="saved_images">Saved Images</string>
    <string name="sepia">Sepia</string>
    <string name="original">Original</string>
    <string name="b_amp_w"><![CDATA[B&W]]></string>
    <string name="gray_scale">Gray Scale</string>
    <string name="saved">Saved</string>
    <string name="vintage">Vintage</string>
    <string name="warm">Warm</string>
    <string name="saturation">Saturation</string>
    <string name="invert">Invert</string>
    <string name="bright">Bright</string>
    <string name="cool">Cool</string>
    <string name="contrast">Contrast</string>
    <string name="title_activity_home">HomeActivity</string>
</resources>